--- a/login.html
+++ b/login.html
@@ -3,9 +3,34 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Roger Wilco Training</title>
 </head>
 <body>
 
+    <!--Login form-->
+
+    <form action="action_page.php" method="post">
+        <div class="container1">
+            <img src="html_assets/logo_color.svg" alt="Roger Wilco" class="logo" width="1000" height="500">
+        </div>
+
+        <div class="container2">
+            <label for="uname"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="uname" required>
+
+            <label for="psw"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="psw" required>
+
+            <button type="submit">Login</button>
+            <!--<label>
+                <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label>-->
+        </div>
+
+        <div class="container" style="background-color:#f1f1f1">
+            <button type="button" class="cancelbtn">Cancel</button>
+            <span class="psw">Forgot <a href="#">password?</a></span>
+        </div>
+    </form>
 </body>
 </html>
