--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <!--Login form source: https://www.w3schools.com/howto/howto_css_login_form.asp-->
+    <!--Login form-->
 
     <form action="action_page.php" method="post">
         <div class="container1">
