--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <!--Login form-->
+    <!--Login form source: https://www.w3schools.com/howto/howto_css_login_form.asp-->
 
     <form action="action_page.php" method="post">
         <div class="container1">
@@ -16,18 +16,15 @@
 
         <div class="container2">
             <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="uname" required>
+            <input type="text" placeholder="Enter Username" name="usrname" required>
 
             <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
+            <input type="password" placeholder="Password" name="pssword" required>
 
             <button type="submit">Login</button>
-            <!--<label>
-                <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label>-->
         </div>
 
-        <div class="container" style="background-color:#f1f1f1">
+        <div class="container" style="background-color: #FFD9E8">
             <button type="button" class="cancelbtn">Cancel</button>
             <span class="psw">Forgot <a href="#">password?</a></span>
         </div>
