--- a/main.html
+++ b/main.html
@@ -3,12 +3,14 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Training Dashboard</title>
 </head>
 <body>
     <div class="lcontainer">
         <img src="html_assets/logo_color.svg" alt="Roger Wilco" class="logo" width="500" height="250">
     </div>
+
+    <!--Sidebar navigation-->
     <div class="mainNav">
         <ul>
             <li> <a href="#">Current Training</a></li>
@@ -24,11 +26,43 @@
     <div class="container">
         <ul>
             <li> <a href="#">Log Out</a></li>
-            <li><a href="#">Support</a></li>  
+            <li><a href="#">Support</a></li>
         </ul>
     </div>
-    <div class="info">
-        <p>This Container is a placeholder where database information will be displayed</p>
+
+    <!--The following containers can be used to display the information associated with each of the links from navigation.
+        JavaScript or JQuery can be used to change visibility to hide inactive links and display information of the selected link-->
+
+    <div class="info" id="ct">
+        <p>This container is a placeholder for current training info</p>
+    </div>
+
+    <div class="info" id="st">
+        <p>This container is a placeholder for scheduled training info</p>
+    </div>
+
+    <div class="info" id="ts">
+        <p>This container is a placeholder for training search info</p>
+    </div>
+
+    <div class="info" id="es">
+        <p>This container is a placeholder for employee search info</p>
+    </div>
+
+    <div class="info" id="ae">
+        <p>This container is a placeholder for add employee info</p>
+    </div>
+
+    <div class="info" id="systat">
+        <p>This container is a placeholder for system status info</p>
+    </div>
+
+    <div class="info" id="netstat">
+        <p>This container is a placeholder for network status info</p>
+    </div>
+
+    <div class="info" id="dbstat">
+        <p>This container is a placeholder for database status info</p>
     </div>
 </body>
 </html>
