File updates. added "training_search.html".

--- a/roger_wilco/training_app/pages/current_training.html
+++ b/roger_wilco/training_app/pages/current_training.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Schedule Training</title>
+    <title>Training Dashboard</title>
 </head>
 <body>
 
@@ -33,8 +33,12 @@
 
     <!--Display information from the database for the current selection in navigation-->
 
-    <div class="info">
-        <p>This container is a placeholder for scheduled training info</p>
+    <div class="stats">
+        <p>This container is a placeholder</p>
+    </div>
+
+    <div class="current_info">
+        <p>This container is a placeholder</p>
     </div>
 
 </body>
