--- a/roger_wilco/training_app/pages/login.html
+++ b/roger_wilco/training_app/pages/login.html
@@ -9,7 +9,7 @@
 
     <!--Login form source: https://www.w3schools.com/howto/howto_css_login_form.asp-->
 
-    <form action="action_page.php" method="post">
+    <form action="#" method="post">
         <div class="container1">
             <img src="html_assets/logo_color.svg" alt="Roger Wilco" class="logo" width="1000" height="500">
         </div>
