Added input fields specific to each page.

--- a/roger_wilco/training_app/pages/current_training.html
+++ b/roger_wilco/training_app/pages/current_training.html
@@ -37,7 +37,7 @@
         <p>This container is a placeholder</p>
     </div>
 
-    <div class="current_info">
+    <div class="info">
         <p>This container is a placeholder</p>
     </div>
 
