--- a/roger_wilco/training_app/pages/training_search.html
+++ b/roger_wilco/training_app/pages/training_search.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="results">
-        <p>This container is a placeholder for training search results</p>
+        <p>This container is a placeholder for search results</p>
     </div>
 
 </body>
