--- a/roger_wilco/training_app/pages/employee_search.html
+++ b/roger_wilco/training_app/pages/employee_search.html
@@ -3,11 +3,11 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Schedule Training</title>
+    <title></title>
 </head>
 <body>
 
-    <div class="lcontainer">
+    <div class="logocontainer">
         <img src="html_assets/logo_color.svg" alt="Roger Wilco" class="logo" width="500" height="250">
     </div>
 
@@ -33,17 +33,18 @@
 
     <!--Display information from the database for the current selection in navigation-->
 
-    <div class="info">
-        <p>This container is a placeholder for training due</p>
+    <div class="search_info">
+        <form action="#">
+            <label for="emp_ID">Employee ID</label> <input type="number" name="emp_ID">
+            <label for="last_name">Last Name</label> <input type="text" name="last_name">
+            <label for="first_name">First Name</label> <input type="text" name="first_name">
+
+            <button type="submit">Submit</button>
+        </form>
     </div>
 
-    <div class="info">
-        <p>This container is a placeholder for training coming due</p>
+    <div class="results">
+        <p>This container is a placeholder for search results</p>
     </div>
-
-    <div class="info">
-        <p>This container is a placeholder for scheduled training</p>
-    </div>
-
 </body>
 </html>
