--- a/roger_wilco/training_app/pages/add_employee.html
+++ b/roger_wilco/training_app/pages/add_employee.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Employee Search</title>
+    <title>Add Employee</title>
 </head>
 <body>
 
@@ -33,19 +33,23 @@
 
     <!--Display information from the database for the current selection in navigation-->
 
-    <div class="search_info">
+    <div class="add_emp">
         <form action="#">
             <label for="emp_ID">Employee ID</label> <input type="number" name="emp_ID">
             <label for="last_name">Last Name</label> <input type="text" name="last_name">
             <label for="first_name">First Name</label> <input type="text" name="first_name">
+            <label for="dept">Department</label> <input type="text" name="dept">
+            <label for="job_title">Job Title</label> <input type="text" name="job_title">
+            <label for="supe">Supervisor</label> <input type="text" name="supe">
 
-            <button type="submit">Submit</button>
+            <button type="submit">Add</button>
+            <button type="reset">Cancel</button>
         </form>
     </div>
 
-    <div class="results">
+    <!--<div class="results">
         <p>This container is a placeholder for search results</p>
-    </div>
+    </div>-->
 
 </body>
 </html>
