--- a/roger_wilco/training_app/pages/current_training.html
+++ b/roger_wilco/training_app/pages/current_training.html
@@ -1,45 +1,50 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="utf-8" />
     <title>Current Training</title>
+    <link rel="stylesheet" href="style/dashboard.css" />
+    <link rel="stylesheet" href="style/doubleview.css" />
 </head>
+
 <body>
+    <div class="leftcont">
+        <div class="locon">
+            <img src="html_assets/logo_color.svg" alt="Roger Wilco" class="logo" width="500" height="250">
+        </div>
 
-    <div class="lcontainer">
-        <img src="html_assets/logo_color.svg" alt="Roger Wilco" class="logo" width="500" height="250">
-    </div>
+        <!--Sidebar navigation-->
+        <div class="nav">
+            <ul class="navlinks">
+                <li><a href="#">Current Training</a></li>
+                <li><a href="#">Schedule Training</a></li>
+                <li><a href="#">Training Search</a></li>
+                <li><a href="#">Employee Search</a></li>
+                <li><a href="#">Add Employee </a></li>
+                <li><a href="#">System Status</a></li>
+                <li><a href="#">Network Status</a></li>
+                <li><a href="#">Database Status</a></li>
+            </ul>
+        </div>
 
-    <!--Sidebar navigation-->
-    <div class="mainNav">
-        <ul>
-            <li><a href="#">Current Training</a></li>
-            <li><a href="#">Schedule Training</a></li>
-            <li><a href="#">Training Search</a></li>
-            <li><a href="#">Employee Search</a></li>
-            <li><a href="#">Add Employee </a></li>
-            <li><a href="#">System Status</a></li>
-            <li><a href="#">Network Status</a></li>
-            <li><a href="#">Database Status</a></li>
-        </ul>
+        <div class="nav2">
+            <ul class="nav2links">
+                <li> <a href="#">Log Out</a></li>
+                <li><a href="#">Support</a></li>
+            </ul>
+        </div>
     </div>
-    <div class="container">
-        <ul>
-            <li> <a href="#">Log Out</a></li>
-            <li><a href="#">Support</a></li>
-        </ul>
-    </div>
-
     <!--Display information from the database for the current selection in navigation-->
+    <div class="rightcont">
+        <div class="divA">
+            <p>This container is a placeholder</p>
+        </div>
 
-    <div class="stats">
-        <p>This container is a placeholder</p>
+        <div class="divB">
+            <p>This container is a placeholder</p>
+        </div>
     </div>
-
-    <div class="info">
-        <p>This container is a placeholder</p>
-    </div>
-
 </body>
 </html>
