--- a/roger_wilco/training_app/pages/login.html
+++ b/roger_wilco/training_app/pages/login.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="container">
-            <span class="psw">Forgot <a href="#">password?</a></span>
+            <span class="psw"><a href="/problemreport.html">Need help?</a></span>
         </div>
     </form>
 </body>
